[package]
name = "intmap-ahashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
intmap = "2"

[dev-dependencies]
rand = "0.8"
criterion = "0.4"

[[bench]]
name = "build"
harness = false